--- a/Pages/aboutus.html
+++ b/Pages/aboutus.html
@@ -7,6 +7,10 @@
     <title>ABC Learning Center</title>
     <link rel="icon" href="faviticon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
     <style>
       /* Font import */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
@@ -154,7 +158,7 @@ footer {
   color: #ffb703;
 }
 
-.dropdown:hover .dropdown-content {
+ .dropdown-content {
   display: block;
 }
 
@@ -171,7 +175,7 @@ footer {
       <ul>
         <li>
           <li  class="dropdown">
-            <button class="dropbtn">Learn</button>
+            <a href="" class="dropbtn" style="text-decoration:none;"> Learn</a>
             <!-- Dropdown -->
             <div class="dropdown-content">
             <a href="course1.html">HTML</a>
@@ -276,4 +280,19 @@ footer {
     </div>
   </footer>
 </body>
+<script>
+  $(document).ready(function() {
+      let drp = true;
+      $('.dropdown-content').hide();
+      $('.dropdown').hover(function () {
+        if(drp === true) {
+          $('.dropdown-content').fadeIn();
+          drp = false;
+        } else {
+          $('.dropdown-content').fadeOut();
+           drp = true;
+        }
+      })
+  });
+</script>
 </html>
