--- a/Pages/course1.html
+++ b/Pages/course1.html
@@ -302,7 +302,7 @@
   color: #ffb703;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown-content {
   display: block;
 }
 
@@ -321,7 +321,7 @@
         <img src="../Pictures/logo.png" alt="Logo" style="width: 100%; height: 100%; "></a>
       </div>
       <div class="dropdown">
-        <button class="dropbtn" id="learn">Learn</button>
+        <a href="" class="dropbtn" style="text-decoration: none; display: block; padding: 20px; font-size: 25px;">Learn</a> 
         <!-- Dropdown -->
         <div class="dropdown-content">
         <a href="course2.html">CSS</a>
@@ -633,7 +633,19 @@
       $("#plus4").show();
     mod3 = true;
     }
+        
+    });
+    let drp = true;
+        $('.dropdown-content').hide();
+        $('.dropdown').hover(function () {
+          if(drp === true) {
+            $('.dropdown-content').fadeIn();
+            drp = false;
+          } else {
+            $('.dropdown-content').fadeOut();
+             drp = true;
+          }
+        })
   });
-});
 </script>
 </html>
