--- a/Pages/course2.html
+++ b/Pages/course2.html
@@ -301,8 +301,7 @@
 .dropdown-content a:hover {background-color: #023047;
   color: #ffb703;
 }
-
-.dropdown:hover .dropdown-content {
+ .dropdown-content {
   display: block;
 }
 
@@ -321,7 +320,7 @@
         <img src="../Pictures/logo.png" alt="Logo" style="width: 100%; height: 100%; ">
       </div>
       <div class="dropdown">
-        <button class="dropbtn" id="learn">Learn</button>
+        <a href="" class="dropbtn" style="text-decoration: none; display: block; padding: 20px; font-size: 25px;">Learn</a> 
         <!-- Dropdown -->
         <div class="dropdown-content">
         <a href="course1.html">HTML</a>
@@ -633,7 +632,20 @@
       $("#plus4").show();
     mod3 = true;
     }
+      
+    });
+    let drp = true;
+        $('.dropdown-content').hide();
+        $('.dropdown').hover(function () {
+
+          if(drp === true) {
+            $('.dropdown-content').fadeIn();
+            drp = false;
+          } else {
+            $('.dropdown-content').fadeOut();
+             drp = true;
+          }
+        })
   });
-});
 </script>
 </html>
