--- a/Pages/schedule2.html
+++ b/Pages/schedule2.html
@@ -7,6 +7,10 @@
     <title>ABC_Learning_Center</title>
 		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 	<style>
 		  /* Font import */
 		@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
@@ -124,7 +128,7 @@
   color: #ffb703;
 }
 
-.dropdown:hover .dropdown-content {
+ .dropdown-content {
   display: block;
 }
 
@@ -143,7 +147,7 @@
         <img src="../Pictures/logo.png" alt="Logo" style="width: 100%; height: 100%; ">
       </div>
       <div class="dropdown">
-        <button class="dropbtn" id="learn">Learn</button>
+        <a href="" class="dropbtn" style="text-decoration: none; display: block; padding: 20px; font-size: 25px;">Learn</a> 
         <!-- Dropdown -->
         <div class="dropdown-content">
         <a href="course1.html">HTML</a>
@@ -254,4 +258,19 @@
        </div>
     </div>
 </body>
+<script>
+  $(document).ready(function() {
+      let drp = true;
+      $('.dropdown-content').hide();
+      $('.dropdown').hover(function () {
+        if(drp === true) {
+          $('.dropdown-content').fadeIn();
+          drp = false;
+        } else {
+          $('.dropdown-content').fadeOut();
+           drp = true;
+        }
+      })
+  });
+</script>
 </html>
