--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
     <style>
       /* Font import */
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
@@ -234,7 +238,7 @@
   color: #ffb703;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown-content {
   display: block;
 }
 
@@ -251,7 +255,7 @@
       <nav id="leftnav">
         <ul>
           <li  class="dropdown">
-            <button class="dropbtn">Learn</button>
+             <a href="" class="dropbtn" style="text-decoration: none;">Learn</a> 
             <!-- Dropdown -->
             <div class="dropdown-content">
             <a href="Pages/course1.html">HTML</a>
@@ -358,4 +362,19 @@
       >
     </footer>
   </body>
+  <script>
+    $(document).ready(function() {
+        let drp = true;
+        $('.dropdown-content').hide();
+        $('.dropdown').hover(function () {
+          if(drp === true) {
+            $('.dropdown-content').fadeIn();
+            drp = false;
+          } else {
+            $('.dropdown-content').fadeOut();
+             drp = true;
+          }
+        })
+    });
+  </script>
 </html>
